clarify that it should be done in the same team as previous assignments

--- a/capita_CPmeetsML_partA.tex
+++ b/capita_CPmeetsML_partA.tex
@@ -18,6 +18,8 @@ This module of the Capita AI course consists of two parts: the first, small, par
 \item \textbf{Friday 20/05/2016 at 20:00} the latest: a scientific report of at most 4 pages with sections: 1) abstract summary of your findings (1-2 paragraphs), 2) method (overview of scheduling approach, learning approach and their integration), 3) results and discussion (of interesting experiments you did), 4) conclusions and future work (if you had more time, you would investigate...); as well as a zipfile of all your code, data and scripts.
 \end{itemize}
 
+The assignment should be made in the same teams as the previous assignments.
+
 
 \section{ICON energy challenge}
 The problem is based on the ICON Energy Challenge:\\
