description: expected time and 3 criteria+bonus points

--- a/capita_CPmeetsML_partB.tex
+++ b/capita_CPmeetsML_partB.tex
@@ -148,13 +148,16 @@ Apart from the evaluation, there are many many things you can try to obtain bett
 
 These are just ideas, you can try anything you want, as long as you have interesting results to share at the end of the ride (e.g. through comparisons).
 
+\paragraph{}
+Professor De Raedt indicated that the expected time to be spent on the assignment is about 20-25 hours.
+
 \subsection*{Evaluation}
-You will be evaluated on 4 criteria, each quoted on 5 points:
+You will be evaluated on 3 criteria, each quoted on 6 points:
 \begin{itemize}
-\item \textbf{Novelty} How novel and creative is your solution? Did you only apply text-book approaches or did you try interesting novel things in your approach?
 \item \textbf{Depth} How non-trivial and in-depth is your integrated approach? What kind of preprocessing and learning method(s) do you use, what setup do you use for the different days and timeslots, does the scheduling problem change?
 \item \textbf{Quality of the integrated method} Is the evaluation scientifically sound (multiple loads, multiple days, ...)? How does your method compare to other methods that you tried (and perhaps to my prototype?)
 \item \textbf{Quality of the scientific report} Is the writing style appropriate? Are the descriptions and arguments clear? Is there enough yet not too much detail? Are the results fairly presented?
 \end{itemize}
+You can additionally win or loose a point based on the creativity and novelty of your solution: if it is potentially publishable you get +2, if it makes no effort to go beyond the prototype or what is in the Ifrim et al. paper you get +0, otherwise you get +1.
 
 \end{document}
